--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
 /* === Thème & Animation === */
 :root {
   --accent: #8B8B4F;
-  --bg-gradient: linear-gradient(-45deg, #a0f794, #c9affe, #bbdaec, #ffffff);
+  --bg-gradient: linear-gradient(-45deg, #767d75, #818181, #bbdaec, #a5a5a5);
   --glass: rgba(255, 255, 255, 0.01);
   --radius: 18px;
   --pad: 20px;
@@ -18,12 +18,12 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --accent: #f0a500;
+    --accent:#9e9e9e;;
     --bg-gradient: linear-gradient(135deg, #4e4e4e, #191919);
     --glass: rgba(0, 0, 0, 0.01);
     --background: #1e1e1e;
     --text: #f2f2f2;
-    --bubble-user: #434343;
+    --bubble-user: #3e3cb3;
     --bubble-bot: #232323;
   }
 }
@@ -37,7 +37,7 @@
 /* === Structure === */
 html, body {
   margin: 0;
-  padding: 10px 20px;
+  padding: 0px 20px;
   font-family: var(--font-family);
   background: var(--bg-gradient);
   background-size: 400% 400%;
@@ -150,14 +150,14 @@ body {
 /* === Footer and input === */
 .footer {
   position: fixed;
-  bottom: 24px;
+  bottom: 0px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
   align-items: center;
   justify-content: center;
   background: var(--glass);
-  backdrop-filter: blur(12px);
+  backdrop-filter: blur(5px);
   border-radius: var(--radius);
   gap: 12px;
   width: calc(100% - 48px);
